Fixes Select2 menu presentation on small screens

--- a/src/plugins/prebuilt-library/ai-wizard/components/tone-select-control/tone-select-control.scss
+++ b/src/plugins/prebuilt-library/ai-wizard/components/tone-select-control/tone-select-control.scss
@@ -42,3 +42,6 @@ div.stellarwp-tone__control {
   }
 }
 
+div.stellarwp-tone__menu {
+  z-index: 1000;
+}
